@@ -19,6 +19,7 @@ package org.springframework.boot.web.embedded.netty;
 import java.util.Arrays;
 import java.util.List;
 import java.util.function.BiPredicate;
+import java.util.stream.Collectors;
 
 import io.netty.handler.codec.http.HttpHeaderNames;
 import io.netty.handler.codec.http.HttpHeaders;
@@ -66,7 +67,9 @@ final class CompressionCustomizer implements NettyServerCustomizer {
 		if (ObjectUtils.isEmpty(mimeTypeValues)) {
 			return ALWAYS_COMPRESS;
 		}
-		List<MimeType> mimeTypes = Arrays.stream(mimeTypeValues).map(MimeTypeUtils::parseMimeType).toList();
+		List<MimeType> mimeTypes = Arrays.stream(mimeTypeValues)
+			.map(MimeTypeUtils::parseMimeType)
+			.collect(Collectors.toList());
 		return (request, response) -> {
 			String contentType = response.responseHeaders().get(HttpHeaderNames.CONTENT_TYPE);
 			if (!StringUtils.hasLength(contentType)) {
